<resources>
    <string name="app_name">NearbySample</string>
    <string name="image_base64_sample">iVBORw0KGgoAAAANSUhEUgAAAMAAAADACAYAAABS3GwHAAAgKElEQVR4AezBgQAAAAwCsKOeN6oQEth2AAAAAAAAAAAAy6fsnGtQlNcZgE+b2IttajRGMKDBW1Nzby7GRBHkuix4l6YmaWPjgAFxEuu0sb+Y6TQKGgPxFkEFvE0SGhVYWHYXxNjOtP1hO5M2M04vqY6OJchl2e+2Jjqevufb70yO1d1S+u7yuZwfz5xhYt7kx/N83/p63P4puaeDb2V/pP0ju0vXHR8ZnzhOG9WFXYNPUkq/ApCRRCKJ2uBFpz9fndoZpA+6DZri0ulUYHqrTh+Cn5/tNGjOqeD5glPK0rgLQSIDWP7bYNbjXoMmN+smU1puZhrE8JTPoBkntb8t7go8A5BYI5GgDyw+Q8c81W74QfyIAYghzIUQsrrU3yx198wASKyQSNAHFviMtKkg9lAC4LBfMxNCmN8ZpI4u/eiqlksTASKRRBv0gU+0qXtF+YcaAOeBNoOm+9TruV7/luKWS2MBIpFEC/SBM9qMP3CZRYYiv8jD7QZd2KEZDnd/SfkpeidAsJFI0AemnDAGwkk9VPk5U4DHPRBCl9aT7xpYLDdGtkdugfjnfyx4OE96DZrZoZ5d5h58GiASCQboAzHF5yRZsD9PmNvBQtBOLmk/lwIQieT/AX1gtOQX4RujLJ+/4YWjg+MBIpEMB+yBMQmA84DboKkn1Ws5HqV8wwcXvgkQieR/AX1grOTnJAPsekVap67luPyvFDY23gEQiWQooA+Mlfyc+yySW6yNUad6aYmrP1dujCQjsgVKiqH8PAARvjHKOql9vMwz8BhAJJJwoA8U5cQXP7L8InxjlNPudzvcF5MBwuFIJOgDw8gaWXpk+UVmtOp0HmyMMr3qu4WNn44DCEciQR84DJmjGsDkphDfbTPo/A71apZ7cNN69/WvA0QiQR9oR/k59wEPtRs0rUMP5HjUF+TGSII+0Abyhw2Ak2TdMcroUC4sauvOAMjoRII+0O7yi7CN0RNeFoJ+Zmlr32yAjC4k6AOjIj6y/JxEi/tdOn3GZ9BMn3piWfv5yQAZHUjQB+LLH/0AODNaDfOOUaZHqV68/+xdAIlvJOgD8cWPjfwibGOU6lW+yHT7NxTX0DEAiU8k6AMFGVGkx5efBxCZyQD7Spd0nzaQ7epbKa9WRI9ySr9a1qDPWVtv7CmtD15Yf9CgZXV6T2mDtmv9YT0ZINECfeCw5LWZ/JwEgM1+lK1Ofco/HS2X5gMEBwmBh0ppneYsqtW7f/yuTle8o9OCtzSat1Wj+ds08+c1tQYtadCLARIN0AfGk/wiSdbGaGGn8rvlvsAsgAwfyeuHtSdePaD99aXdOsjOpA/PD3fqdF1dMBsg2KAPtIf8+AFwprKNUUeQLmzX3nN88K97ASIZOhuPGPfDg/LUy3t1uth62kekMsSqnXogGl+OQLAH2kd8fPlFZrgM+pxHvZ7pDVS8dKj7WwAJj+SNRjqurF5vWLPPoEvf1qiTCz7EANivX7svmA4QTAj2QNvKjxzApBMM646RT7mS6R4oLWykdwDkSyTs3lVZg1FevFe5vqJaZyJzhhwAZ9UObQdAMCHYA20mPr78QgCcBMDcGHm1XkdLYJG1MZKbnfrg6uL9qvH8DlH84QewdHvgY4BgQrAHRl98e8kvwv57j3nM1enZnOPdcwAyGll36Gp2Sb3+2Sr2G1wuPEIAzi26AhBMCPZAO0jPSYxxAJyk5tDGKN2rd2U3d08DyGhgwxH1kdI6/S9spVmwLZz4nKHLz3GGIJgQ7IE3SogvvN3l59wLsMt2c3xsY6Q05MPXtwAkHtnQoCeV1Ruen9TodMnbbK2pc8nRnv4CBBOCPRBB3ttefh4AZ3praGOU4Q78ciV8fQtA4oGfNV2/q6xOrSmCzc7yKia+KL8MwO7ic/nxn/5hMO8Y+TQjw62suZ03RuWN9GuvHbryxtoa5drKai4+RwYg5Y8Am/Vgu0HneQPdOa09DoDcLrDNzrqDxgtF+zT1+Z2C9AIyABuIjy8/XgCcxCbrjpFH/3N2Y8/jALEz6w4H00vq1Ysv7tZpQRjxOVGUXwbASYyN/AC+/BMFJlsbozSf4k197+9TAGInfvHhle/BPv+Pq/cadPF2LvmIPf1lAIk2kB8zAA7fGKW6B2uX1J+7GyAjycZD6qT1dWrzKzUGbHb4U3/EApABJMax/CLTXQad26FeS3Nrm16uP/cNgMSS8hY6Fu7jVxfth81ONROfgxNAngwAQfi4lF/guE5nsdWpVw+kuwZejMXXt9ScoWNeO6i/XrxfufqDHYYovp2e/vYPIIyACKLjiI8vP34A9xxnhP6d2W522S5wMbu5OwMg2LDNzoZD+oqSffrgql2C+LgByACQsYH8QBTlF2GX7R71wOrUE/hTlq9vNkAw+Hld4LlX69TzP9pt0EXbNFqw1eL2DkAGkBBH8ouwN+aTbGPUpjbnHjs/GSDDYdMHwZmlB9Tf87+Ukm+Kr1toHDvKLwOIRIKt5McPgJPMN0Ztyjtpuz75NkCGwk+PKhNLDgQ+XFPLrharpvj5lebJESPgyADsHkDCKJJ/gkAK2xh5lC8WuPwb08rpnQC5FeU1dGzZAWVbEYi/okoBqZn0CgBnpYAYAYMHAMgAbBhAgt3lj2IAnHuAWW3mxsif3aoWihujcohiXe3A+uI9/Z8XVgVofsUgiB4AmPwQgil+5BDyTTTOSMsvA0hAFh9ffk705ReZaG2M4Nbppxnvdy8s2tOzomh3X//zVX7q3AKA/PzMNwkwWACAKpzaDRE42Rk5BBmAiJ2lt6f8OAFwJjXp9JF2gy5sU2nmnsvUubkfGGCIIQAQARApBCecXOBwIThvRAaQgC88vvj2kB/Ak58z3iLRumO0oDlAs6o+o843+3kEcJoB8NOKQOEh8I9FoQAih2D989jI7whBMCHYA7lsI4eUXyS52YCNkUHTfu2nOdt7rRD8NA/gAYTeBgEeghmAkxM5BB4ARwZgZ/HtLz9+AJxpLoM+y0I40kdzK3kIAzwEEzEEZwULgMWgCiEIWNI6b4UovwxgpMWX8nMmADNb2V/GgRDqIYTNfVYEN4dg8l9CyKsAKiOEgCm/DABZfHz58T/6IAdw9zEGm23dMWrXaHptL8jff0MIeSA/P3kIJiwAKwSQH9B4BGFDyKtUZQDxKb4ov/2f/jwAEfb/zzZGqS6VZu7+cmPkeDNiCEIAkUPIM1E5MgD7SC/lF0lssjZGxwdpZtVlmverfpoHETiY/GIIoQjgVICAFQBQqYohCNKqESIYhvwyAC6slB8zAA7bGD0NIaS976fZ23qtEPxiCFYMLAKGGQBEoYohmDgYlSaCzCpHBoAnPL74+PLb9+kvMs4ixaXTuT6dph3uo9kVvTe9ERxmFP8ZAiCE4BAi4AgRWMRhAGFkwxccX3wpv8B4c2Ok03keCKGuD4QPRZDLCAUghABACAALwJKfnxHeBhUWkeSPgwAQkPLHOgDOBHNjpNNUtjF6F1an8DZwhEKAc/CWITgYLABGpLdBhcqRAdhNfCm/gLUxerhdp/ObFZqx8zJ1iCHc8EZgATBCAeSFexuY4keOwCEDsKf49pcfP4DvHNNMEpo0+n2PQVOPwcZoe68Vgp/mAua5GWAxMCK9DYDIEcgARkx6KX/4ADhJzbq5MVrwHmyMtvaxEPjvD1gA/BTfBvzpz35m3DoCLr8MwFbi48tvg48+wLDk54wDUlqsjdGB3n+zd2/BcZZlHMDXcdQrbZr0AKWgZRA5TVVQUEsP2eymjjNeeMGVXiijKIzY9JA0zaFtUvAAIqcKVI7SltKCDugACnIBg6ilOWwObZNs0iQ901JK4cIZZnz9v0/+myfPZjuB8hK+JV9n/vN+cv17njzvs9+urrL5GO4IJyQsAP1rYEeiCYogLoBg6GP84bt/fkr+/I770jO4H2w/4dJN+93S5uMFioDjENemExRBXADhwYeHr/inwOgzQT775DtuLsaiBY8dd6m6vW7puoO2CHhBzrsk4+RIpAUgz3EBhEce4w9fAMSvOQ8j0eI7Bl2qttul63rd0qbDWgQ3+Yuy+WvAIrCXYj4XZwGEhBl9+DF+UwDMl7ed8AWA7Hbp2j0u3dDvlm7A/QD4kfwisKNQXADRhh8ef/GPPvk550m8Xbq6yxRBBc7U2kFXKduik4VHIaBfyiKICyBC8KOPP1oFULb1GOB3Ab0UgccvSa7BWb/XpdcfwNp09EMzBvhRDKYAkLgAQqGPPvzix8/M3ZjFX4BOl8JfgaSk2yWlCJC6vSiCHoxFWYxFR81fgrgAJhl+jD98AZRsPeIuX9/pKmo6XLKmS1KOSAHgL0Cybg8KYKQIUg0ohLUD+GtwDPC1AJC4AAKgn2T4Mf5pW4+6ebd1uuSqjCtHktUdyJgC8FmjBZBu6HPpxqyrRFLrh1yl3xad/h6A/y5JhAwfwqWYwSv8qOOP2OjzxNtu+iP7gL/DlVe3e/xIB9KJ/434EWi1vwOwADAGpbAiZQHgRAGs7UcGXLr5EP4SnIwLIDD46OOP/tzPWPglWw65mfd2u0s3AP3KNle+os0tWdnOAkByI5AWAPBj/KlHAfhIEfRrAUj2ucoNR1EIbxn8RVEAiikCwCMOn/iLcvSZ9tjrruwPe935t2TcgloPH1k+WgBIh3T//AJIrdlrCiDVkNUCIH7JOqxM1w/iw7NjXI8WUQEESCThx/hxPv6GK32g1513W8ZduQbYl7cAfgtOFoF0/4xb4rs/53+OQNL9WQBIr4w/KeDXAgB8LQBkH4pgCGPRAdwP3ogLIErow8KPPv5p2990pQ9l3Zw7M+6KBoHvA/StOFvZ/RF2/5ECwIW4plsKQD4Iq2UByAaoFxlbAAMsAPsXQAogl+aDPomQ4UO4FDf84scfugCmPXHKlT4y6Gbf1eHmr0N3r9qVh1+i+Fcp/nKPn+NPheDnBRj4K2T86UMBZD14FoCOQIIfAXxmOJdEyPAhXD7O6Al/auB/EpudzQfcrHu63CUb2t3iFYCv+At3/lUZ7f6Aj+5P/GPGnxz8ekTmfw8f4Sn4Ad4WwHBcAJOEPsaPOX/6lsNu5qZud9Ev293ClWPh77IzP+ILgfjt6JOb+7X7y+7fdv8BLQD+FZDRhwWQlgzHBRAAfQTgRx9/ybZjbobf7Nza7hZUt7ikh48ofGDXkUcvvdUdTKfir+lW/D51PXndv5/4Of5w7mcBFMSfGkkiZPgQLsUP3sKfCvinYbNT9kDWnXd7xl21pk3g66xP+ERvuv4o/szoypOdfwL8Wdv9cWLjY7s/ToN/qhaARRkB+BEYeULhn7bjJDY7A9jsdGCzQ/gM53yFr+EHXbbzm5m/MH6OPhY/xx7b/RnFX0QFEBhj8cOPAH7GXHBLHxlys3+PzU5zu0su20n4Pq/JjC8h/uRK4vfnqgxOBPCTNdr15cy/8Cp+xJ/9dvQhftP98/HHBVAc8KOPnxfcRw+6WXh14eKbsdmpyoe/yyVH4bcKfETHHQ8fBQD4fM1ZP+hi1yd+pF7xp5Gx+Ln2lJP4WQDDpvun8tO03ycRMnwIl6mGnvAjjx+vKeOC2+0u/I1sdgS8gV/VAvwCn10fWUX4fLktWY0Qf4Xv+ojp+vygi9se4teZPwD+uAACwJ9S+Eu2HXcz7u9x5/+23X2regT8EuJX+MiKNsJvFfjlDODrq80efm23nIK/Vmd9fshlRh6+6KYz/+nxIxPjjwsgPPqIwA+Pv2T7CVf2YL879/Z2vLPTSviIhY8AfA6+zPjtwD4Wfqd0/Rz8JL/imEQIn+/2sOs35uATP5J34S2MnymMPy6ASKAn/EjjL3niLVf28D53Nl5duLzRz/MKH89ET/g+QC8R+Bn7ZRbAlyh8ZA/f6pRxh12/R7t+Y3Yka+3Ik2o8LX5kAvxxAYQFHwH44fFjs1P26LA7654Od1kTVpXL/pODL6fgx7Pp+gIfIXx/Ej6j8Dnny6nweyU67iCCv99VsuPn7/k/EP71B3wSIcOHcCl+7DbTo971sdkp3XKIm502bHYAH2tNoCd8pEo7P+AjMudr10f8d3gVf5ft+rzg6re5eoi/Jw9+VuADO+Ej4+b9oTPCn246MLUKoPQjzvQiwD996+t4Z2e3bnY8fEThc95n1/fwddzx6RD4PjLne/RMxbgL7h7Cl8iXWTx67fj9hD7u3R6D32b4/eKPfgF8MHgxfGRi+NvecDPwpZR5frOzmpsdwW/gIxa+hPDZ9YGe8GsKwwd6wrdfY1T4CNCnmZReeA38QPjjAogyegs/PP6SHW+6GQ9hs3MH3tmpa9HNjoeP08JHAF+7vk+G8D36TiAfC1/HHV5wDXx/Er+Hj2TZ9X2AXcDrmtPi50n47we/KYCmgz6JkOFDuBQd/Mh3fW528KWUc+7KuK82ttrNDk7JaeG340S04zMGviR/s2PhEz/hC3rgJ3yE8BHCD40/LoCQ6KPf9XnBlc1O18hmp2qn3ewgmPsFv4WPED5OC1/Q5+DbryqaCy5i4Df2nRZ+JU7it/AlhM+kzwx/XAAB0UcAPjPRZue+LncxvpSyaIVHL7Hw2fkNfOn6hM+ur/AZhS9R+Mg4+Oj4PoSv4w6i+M24oxk+M/wM8ccFEB58BOEz0x8b2ex88RZsdvTVBYRjDud9RLs+4JcjnPMBn+GcX8GkDHyOPBPBt3O+PBO+RGf9sRkKhT8ugHDgIwCfKQj/cbyz82Cv+8Lv2t03V7fkv7qgL67hTErXbxkD3ydjur7AZ9cX7Ab+XomFL1H43Ovbjt9P+Aywp3lODv5DPomQ4UO4RB96tOCXbD+JzU7WzcVm58q6XePh8yR84lf4uZGngjv9FMcddnyC1wIQ+HVI/pzf2CchfKQ/D/6AgT8e/1Bh/MxE+DWnxV8cBRAcYLHDZ8Zvdk65sj8Oujl3d7ivrPMdf6eFryH8FnZ9jjqEz47PdI6Dn0b4Ka6HjxTq+r2E34/IL7UZ+BKDfR/xE/4k4C+uAojRM4Xf2SndvN/Nxmbn0g3+C+a5Vxd26ZzP08BHFD5S3W7hy7zfDfQ+/L8mAnrz7SxkPPw+A1+eCZ8x8BX/0KThL/4CiOFzs3PYzdrkNztt2OwA/TLGwpcQPscd4id8xMD3Efh1Cj9Vp+OOwEcIn6MO4tFL+ok/a/ALeMJX/IMfHf7mwz6JkOFDuExZ9EzhVxeOuZn373UXYLNzdbW+s4MQvh13DHxE391BajKc8/XTXO34OOv2IHnw6wvB77PwEQs/P4Oh8Wua3zP+uACiBX6COf9x/85On/s8NjvfWKPwx726IOgFv4XPOZ/wAX7cuAP0hA/wknoDHyF8BvDtuMNPdi3+gTPEz3xo+A/5JEKGD+FShOjDw9+Bzc7DA27unRn39Qbf4fPgL8uDzxmf8PU1BlxwCR9nx5iOT/x1u6UACB/psfg551v4iMKXKPx8/IORwR8XQHjw4ccd2ewMubM3Ztz89ejk8qUU2/HltPDZ7e37O4DPAH8+fB8/4yOE70P4o/gJP4vo+/qEr1H4DOFHEH8aJ5IIGT6ES6Shh0evm50tB9zse7vcJTe1usVVhM/XlAU9i8DARxQ+wnFnLPyKWsWfruVaU+Z8hV+JGPiIgc9nA9+MO7kMRh1/9AsgosjDw2dKtx6Rzc5Fv2pzC+WdnZ2MhY8Q/NgLrsLPbXgIH+kQ/Bb+bjPuVPo0WPh23CF8O+5ILPx9k4kfOWP80S+A8PiiCX/6tuPY7PS4C+SHZDnnM+XLPXz76oKBL7Hfya2oyRj4FWu6CF9mfWSPhU/wBn5jr4Hvs1ThM/0WfqTxE31cAJObiX5uZMaDWdnsXFWr8M3XEBW+5PTw2wU+CoDwuwR+qlbnfMbCF/A8EcBH8sYdnBZ/f1HijwsgAui52ZGfGznnznb3tXog5wWX8LnVUfhMwQuugV+jHR/hJTfX8WXWt/gbJRZ+A6LwGdP1JYRftPiL4nOAjxN6XnBls3PWxnY3f90ugP+3/uRIbtxhEWjH5zkePkP46PoKf7d+mkv4COEr/qU59PoDVAqfMfAZoi92/HEBTAJ6fXVh80E34+7WE/PWvvD9RT/963cWXPvU/sU3vOgLwMD3UfjY5+MscMFFOgif4bjj4VfUdbPrE76PhQ/cBr48W/hm3GEGih9/XACTAN783MhRN2NTx3/nNr1cc8V1mz6FJHzw7xOLr336hwt+/JdTS37+kp//iV7hc8438CvY8Ufx11r42vUJH0Wg8BHp8DruAL7Ews/PQBHiPzIB/rgAgmMf93Mj9+3+39m/fmXjlTdu/hySKJRrrun69MKfPddw9U+efrd82Ssj8CWtBS+4hG92+inCT9V7/D2Ej9PHwkfy4KMQxsAH4qyF/7HFf8QnETJ8CJdIQ5/g50Zm3frqM+de+9QcJPFekrpux7RF1z9/36IbnnfJqn9xzi8I3+AnfGSPhd9A+Ajhc72JEL7Fn40ifiY4/uIoAIUVFnb46M+NlN3xWtuF656djyTOJItv/NPcq69/7pklN76IvwC7CsNHZNwh/FSd4gd8pCcfPk6Fz5iujyj8ifETflHiL84CiGj4Q7L73cy7WofnNf4tjSRC5Hsr/3kZRqO28qqXUQAZwueWp07hpxHM+cQP+A2CHiF2fS7c9RmCnzL4K5okiZDhQ7hEGj5/bmTm3W2n5q59/kf+UosE//fdqpeSS274+/7kilflwqvwETwb+I2Igc/ZX+ETv4T4+6cWfqai+ahPImT4EC6RhM/NzsxN3e/OufnltRd8+9nPIIkPM9fs2PHJ9PJ//GDhL154O1Xz2ug7PDLn+zQSP7EDPvEb+EifgT+F8ccFcEbw5Usp/2fvXmOaOsMAjr9z0y1zirQ4UYIfxA/GbHGJWaZYeq5Fo4tmy/iyLFv2hZhdhHJ6oxReW50uTp1jQubYjLqoGy6aLM4lixcYFOgFWrAooIgiyETBDd3covPdeYaxC0a0eHrlJfk9fif/p/S8ree0k9RNtV8vyDs0TYYiKQdXTmKl4+asD47d0lmag+GDEa/64P/hg2D4ocevw4kUP12AEARvN5Kypf7oHPMPs2UomnLwief4/OpyzlBLRGtgZPggGH7ixg9CjZ8uQMgnO7vPE/WnnkCG4/BCGYolS63VM1n98SOCqY5k29qG48cjXvUB7oxo/GJsx08XYBT3Hv6cvLubqEob+2bbfnxVhmLZStwwn8+r8osWz91PdYPf4x9r/DocufhFe+TjFx39ACkJhqLCFviDwMOf5ZMddXnzjfT1R1cz+MRTMhQvsgtrOSb/WK9gaSJi8eiv/DT+OFgAiDJSpu3rJynlrbdnbazaMDN3x7MyFI8wIRN05vq3sgpqr4vWlpDi1+FxFT9dAJAkn+yov+ogqR/X7Jv3/kG1DCWC3B3eiWJhnVUj/XJbtJ0KW/xifMZPFyDpu2tEvbOTqDc5a9INBzNkKBEtww1TBYOzgjc2EF1x233x63CCxQ8eJf51VwBSEgxFTf0+DOEfGCKqXefJ9K2ejozinxbL0HiwwlqXxklVR3mTBy6QafzxsABJ+wf/Vix+ONn5poeoyvy/puFjrwe/ujC+flY5PC8y+uoAb24iIj4XcvxiROPvC2f8cbEAbY8fPpzs9BF1WesfqRuc7wX/U8r4ttTqWsqsqb4sFMKFcldY4xftMRl/7C+Aak/PF491srP/CkmpCPyTusXz0Qxpz2QZCqLgxIgzud/VFDhvCkWt4yp+wfEfpCQYikqtaFsGb13GdrJzlszY7N4798Mj02XowagcHJgkGOrtvKHmjs7WPvL9fqLGH/sLMB9XTkraeWFoivw2Bjw0/MrfiGrnOaIq9VVn4BNzZejRUTlmbxJvrN/Nm73w2UGixx/7CwDSynwrpu3phQV4oKmVQyR51wWiLvWfSltfs0iGxo7KLnKnc1JtFWtuhKe1K/9wiqjFH4cLAFLLWlarKjpI0t7Lcuy/kykHrhP4N2lfP0mWX/FTtjf3pG+sXaXsyQ79WW4NvKTRV3dwlmYirL0QM/ELCsQfVwsAZm7zzp5e7tum/tzfpdruuym/zTmTUuorT/vE8wrCZIIMhQclWuqXa/U1V3lrK/wlUDB+EJ34+WFISTASFFVZSZ4UjI25Gsn5l2DrCIa/Nm7jpwtAhW7ZZx1Ps4b6DazJTURbZ/zFTxdACZTG0pLMSM5vORN8otwVH/HTBVAaJVjcc5gCZx0Ht27B3aE8nCKq8QuOqwApCQY1XlmaXl6S7zzHWwNwXRDr8dMFUB6FCHlCZ3a9xkiuQcHWDn8FYjH+8C4ARcGJEWtyrdHkuW4JxZ2h37EtAvHzw5CSYNxDUe/grmeYgobNLHz1uqQrtuJfNwCQkmDch6IY7E3RSq5DrMVPBHxRsfgFx5jjj/wCUFQ2bpyr0de42cKTcH0Q7fjpAlDRwRW5MzPz67tZaxvh116KfPx0AahogxMjvtDzBpPnHuJsZ6MRP10AKvrg5mNak6cg0+i5zZV0RTD+QYCUBGNMKEon+SdrJdd2xtxMeNwdifjpAlCxhzG4UrV692HO0koEO1wfhB4/P3r8dAGo2McUeudlFXj8rPU04e39ysfvGABISTAURVGLjE0Mo3f3ssVniGBXJn4g4oEhGVISDMVRFJwYCbbmN5eYvDfYkq7Hix+sv0Z4W59PhpQEI2woamGudyJj8FoYg+cOhy+OPX6Ae7fKkJJghB1FrTSeniJfH3zJWAKEw5dCjp9zDBCmqE0jQ0qCETEUJRobZzGS62emEC6ULz88/nXDtEXtgxiTCTKkJBgRR1GM5H9BK3kCrPUM4R39o8bPFp8ni4wtjAwpDQZFRQ1jaRGX5DV2M9Y2wpX0EN5+dxnsVwiLe4jW0kq0hqa3ZSgcYFBUVMGJEac/uUBj8m3OzPO0ayT3n1n5DWczJd/GxZL/eRkKFxjjFkXRX8K/7dMxDQAAAICg/q3N4cZBBBAABAABQAAQAAQAAUAAEAAEAAFgSgAQAASAALGlF9eHWaU4AAAAAElFTkSuQmCC</string>
    <string name="disconnect">DESCONECTAR</string>
    <string name="connect">CONECTAR</string>
    <string name="connecting">Conectando...</string>
    <string name="accepting_connection">Aceptando conexión...</string>
    <string name="success_connecting_to">Conectado con éxito a</string>
    <string name="connection_failed">Ha fallado la conexión</string>
    <string name="disconnected_of">onDisconnected: Desconectado de</string>
    <string name="type_a_message">Escribe un mensaje...</string>
    <string name="send">Enviar</string>
    <string name="messages_received">Mensajes recibidos</string>
    <string name="press_connect">Pulsa CONECTAR para buscar dispositivo</string>
</resources>
