<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fvaldiviadev.activities.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_connected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/press_connect" />

    <Button
        android:id="@+id/b_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:layout_gravity="center"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_marginTop="20dp">
    <EditText
        android:id="@+id/et_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/type_a_message"
        android:inputType="textPersonName"
        android:enabled="false"/>
    <Button
        android:id="@+id/b_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:enabled="false"/>

</LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messages_received"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

   <ListView
       android:id="@+id/lv_messages"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

   </ListView>
</LinearLayout>
</android.support.constraint.ConstraintLayout>
